[package]
name = "ruwm"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
build = "src/build.rs"

[dependencies]
xcb = {version="0.8.0", features = ["xkb"]}
xkbcommon = { git = "https://github.com/InsidiousMind/xkbcommon-rs", features = ["x11"] }
scancode = "0.1.2"
colored = "1.5.2"

[build-dependencies]
peg = "0.5.4"

