[package]
name = "ruwm"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
build = "src/build.rs"

[dependencies]
xcb = {version="*", features = ["xkb"]}
xkbcommon = { version = "0.3.0", features = ["x11"] }
scancode = "0.1.2"
colored = "1.5.2"

[build-dependencies]
peg = "0.5.4"

